ทำการแก้ไข UI ของระบบย่อย ระบบบันทึกอาการ -close #100

--- a/Angular/src/app/treatment/treatment.component.css
+++ b/Angular/src/app/treatment/treatment.component.css
@@ -17,3 +17,10 @@
     margin-left: auto;
     margin-top: 30px;
   }
+
+  .example-full-width {
+    width: 20%;
+  }
+  .example-full-width1{
+    width: 35%;
+  }
