--- a/Angular/src/app/medical/medical.component.html
+++ b/Angular/src/app/medical/medical.component.html
@@ -87,7 +87,7 @@
     <mat-card-actions align="center">
       <button mat-raised-button color="primary" (click)= "save()" >บันทึก</button>
       &nbsp;&nbsp;&nbsp;
-      <button mat-raised-button color="primary" routerLink= "/Pagemenu" >กลับสู่หน้าหลัก</button>
+      <button mat-raised-button color="primary" routerLink= "/remed" >ไปหน้า ระบบรับยา</button>
     </mat-card-actions>
     <br>
   </mat-card>
