--- a/Angular/src/app/pagemenu/pagemenu.component.html
+++ b/Angular/src/app/pagemenu/pagemenu.component.html
@@ -1,16 +1,47 @@
 <mat-toolbar class="color1">
-  <mat-toolbar-row>
-  	<font size="5"><b>ระบบคลินิกรักษาสัตว์</b></font>
+  <mat-toolbar-row >
 
-    &nbsp;
+        
+        
+     
+            <a mat-stroked-button routerLink='/petinfo' class="color"><font size="3"><b>ระบบย่อยบันทึกประวัติ</b></font></a>
+        
+          &nbsp;
+          
+            <a mat-stroked-button routerLink='/treatment' class="color"><font size="3"><b>ระบบย่อยบันทึกอาการ</b></font></a>
+        
+          &nbsp;
 
-    <span class="example-spacer"></span>
-    <a mat-stroked-button routerLink='/petinfo' class="color"><font size="3"><b>ระบบย่อยบันทึกประวัติ</b></font></a>&nbsp;
-    <a mat-stroked-button routerLink='/treatment' class="color"><font size="3"><b>ระบบย่อยบันทึกอาการ</b></font></a>&nbsp;
-    <a mat-stroked-button routerLink='/Recuperate' class="color"><font size="3"><b>ระบบย่อยพักฟื้นสัตว์</b></font></a>&nbsp;
-    <a mat-stroked-button routerLink='/Appointment' class="color"><font size="3"><b>ระบบย่อยนัดหมาย</b></font></a>&nbsp;
-    <a mat-stroked-button routerLink='/paymentinfo' class="color"><font size="3"><b>ระบบย่อยแจ้งชำระเงิน</b></font></a>&nbsp;
-    <a mat-stroked-button routerLink='/Medical' class="color"><font size="3"><b>ระบบย่อยสั่งซื้อยา</b></font></a>
+          
+            <a mat-stroked-button routerLink='/Recuperate' class="color"><font size="3"><b>ระบบย่อยพักฟื้นสัตว์</b></font></a>
+          
+          &nbsp;
+
+          
+            <a mat-stroked-button routerLink='/Appointment' class="color"><font size="3"><b>ระบบย่อยนัดหมาย</b></font></a>
+          
+          &nbsp;
+
+          
+            <a mat-stroked-button routerLink='/paymentinfo' class="color"><font size="3"><b>ระบบย่อยแจ้งชำระเงิน</b></font></a>
+          
+          &nbsp;
+
+          
+            <a mat-stroked-button routerLink='/Medical' class="color"><font size="3"><b>ระบบย่อยสั่งซื้อยา</b></font></a>
+        
+          &nbsp;
+
+          
+            <a mat-stroked-button routerLink='/Serve' class="color"><font size="3"><b>ระบบบริการ</b></font></a>
+        
+        &nbsp;
+
+        
+            <a mat-stroked-button routerLink='/triage' class="color"><font size="3"><b>ระบบคัดแยกอาการ</b></font></a>
+        
+  
+        
 
   </mat-toolbar-row>
 </mat-toolbar>
