--- a/Angular/src/app/move/move.component.html
+++ b/Angular/src/app/move/move.component.html
@@ -8,11 +8,11 @@
   <mat-card>
     <mat-toolbar color="accent" class="body">
         
-          <span><mat-icon color="primary">label</mat-icon>&nbsp;&nbsp;&nbsp; ข้อมูลสัตว์ </span>
+          <span><mat-icon color="primary">label</mat-icon>&nbsp;&nbsp;&nbsp; ข้อมูลพักฟื้น </span>
     </mat-toolbar>
      <br>
       <mat-card-content>
-              &nbsp;  
+              &nbsp; <font size="4">ข้อมูลสัตว์ : </font> &nbsp;  
               <mat-form-field >
                         <mat-select width="80%" placeholder="" [(ngModel)]="recSelect" name="namerec">
                           <mat-option *ngFor="let Recuperate of namerec" [value]="Recuperate.id"> 
@@ -22,9 +22,54 @@
                     </mat-select>
          </mat-form-field>
       </mat-card-content><br>
+
+      <mat-card-content>
+              &nbsp; <font size="4">ประเภทกรง : </font> &nbsp;  
+              <mat-form-field >
+                        <mat-select width="80%" placeholder="" [(ngModel)]="recSelect" name="namerec">
+                          <mat-option *ngFor="let Recuperate of namerec" [value]="Recuperate.id"> 
+                             {{Recuperate.cageType.nameCageType}} &nbsp;&nbsp;
+                            
+                          </mat-option>
+                    </mat-select>
+         </mat-form-field>
+      </mat-card-content><br>
+
+       <mat-card-content>
+              &nbsp; <font size="4">กรงเก่า : </font> &nbsp;  
+              <mat-form-field >
+                        <mat-select width="80%" placeholder="" [(ngModel)]="recSelect" name="namerec">
+                          <mat-option *ngFor="let Recuperate of namerec" [value]="Recuperate.id"> 
+                             {{Recuperate.cage.nameCage}} &nbsp;&nbsp;
+                            
+                          </mat-option>
+                    </mat-select>
+         </mat-form-field>
+      </mat-card-content><br>
   </mat-card>
 
-<mat-card>
+
+  
+
+
+  <mat-card>
+    <mat-toolbar color="accent" class="body">
+        
+          <span><mat-icon color="primary" >label</mat-icon>&nbsp;&nbsp;&nbsp; เลือกกรงใหม่ </span>
+    </mat-toolbar>
+     <br>
+      <mat-card-content>
+              &nbsp;  
+              <mat-form-field >
+                       <mat-select placeholder="" [(ngModel)]="nameCageSelect" name="nameCage">
+                          <mat-option *ngFor="let Cage of nameCage" [value]="Cage.id"> {{Cage.nameCage}}
+                          </mat-option>
+                    </mat-select>
+         </mat-form-field>
+      </mat-card-content><br>
+  </mat-card>
+
+  <mat-card>
     <mat-toolbar color="accent" class="body">
         
           <span><mat-icon>label</mat-icon>&nbsp;&nbsp;&nbsp; ข้อมูลเจ้าของสัตว์ </span>
@@ -42,23 +87,6 @@
       </mat-card-content><br>
   </mat-card>
 
-
-  <mat-card>
-    <mat-toolbar color="accent" class="body">
-        
-          <span><mat-icon color="primary" >label</mat-icon>&nbsp;&nbsp;&nbsp; เลือกกรง </span>
-    </mat-toolbar>
-     <br>
-      <mat-card-content>
-              &nbsp;  
-              <mat-form-field >
-                       <mat-select placeholder="" [(ngModel)]="nameCageSelect" name="nameCage">
-                          <mat-option *ngFor="let Cage of nameCage" [value]="Cage.id"> {{Cage.nameCage}}
-                          </mat-option>
-                    </mat-select>
-         </mat-form-field>
-      </mat-card-content><br>
-  </mat-card>
 
 
   <mat-card>
