ทำการแก้ไข UI ระบบบริการ -close #163

--- a/Angular/src/app/serve/serve.component.html
+++ b/Angular/src/app/serve/serve.component.html
@@ -21,7 +21,7 @@
 
         <mat-form-field>
           <mat-select [(ngModel)]="TypeList" placeholder ="รายการ:" name="List">
-            <mat-option *ngFor="let Type of list" [value]="Type.id">
+            <mat-option *ngFor="let Type of list" [value]="Type.typeId">
               {{Type.list}}
             </mat-option>
           </mat-select>
