--- a/Angular/src/app/treatment/treatment.component.html
+++ b/Angular/src/app/treatment/treatment.component.html
@@ -73,7 +73,7 @@
       <mat-form-field appearance="outline" class="example-full-width">
     <mat-label>Medicine</mat-label>
     <mat-select placeholder="Medicine"[(ngModel)]="nameMedicineSelect" name="nameMedicine">
-      <mat-option *ngFor="let medicine of nameMedicine" [value]="medicine.id">
+      <mat-option *ngFor="let medicine of nameMedicine" [value]="medicine.medicineId">
         {{medicine.nameMed}}
       </mat-option>
     </mat-select>
@@ -93,7 +93,7 @@
 <mat-card-actions align="center" >
   
   <button mat-raised-button class="button-color " (click)="save()"><mat-icon>dvr</mat-icon>&nbsp;&nbsp;&nbsp;บันทึก</button>&nbsp;&nbsp;&nbsp;
-  <button mat-raised-button class="button-color " routerLink="/Pagemenu"><mat-icon>home</mat-icon>&nbsp;&nbsp;&nbsp;กลับสู่หน้าหลัก</button>
+  <button mat-raised-button class="button-color " routerLink="/Pagemenu"><mat-icon>home</mat-icon>&nbsp;&nbsp;&nbsp;กลับสู่หน้าหลัก</button>&nbsp;&nbsp;
 </mat-card-actions>
 </mat-card>
 
