ทำการอก้ไข UI ของระบบคัดแยกอาการ -close #177

--- a/Angular/src/app/triage/triage.component.html
+++ b/Angular/src/app/triage/triage.component.html
@@ -68,7 +68,7 @@
 <mat-card-actions align="center" >
   
   <button mat-raised-button class="button-color " (click)="save()"><mat-icon>dvr</mat-icon>&nbsp;&nbsp;&nbsp;บันทึก</button>&nbsp;&nbsp;&nbsp;
-  <button mat-raised-button class="button-color " routerLink="/Pagemenu"><mat-icon>home</mat-icon>&nbsp;&nbsp;&nbsp;กลับสู่หน้าหลัก</button>
+  <button mat-raised-button class="button-color " routerLink="/Pagemenu"><mat-icon>home</mat-icon>&nbsp;&nbsp;&nbsp;กลับสู่หน้าหลัก</button>&nbsp;&nbsp;
 </mat-card-actions>
 </mat-card>
 
